frame/support/test/tests/derive_no_bound_ui/ord.stderr
error[E0277]: can't compare `Foo<T>` with `Foo<T>`
 --> tests/derive_no_bound_ui/ord.rs:6:8
  |
6 | struct Foo<T: Config> {
  |        ^^^^^^^^^^^^^^ no implementation for `Foo<T> < Foo<T>` and `Foo<T> > Foo<T>`
  |
  = help: the trait `PartialOrd` is not implemented for `Foo<T>`
note: required by a bound in `Ord`
 --> $RUST/core/src/cmp.rs
  |
  | pub trait Ord: Eq + PartialOrd<Self> {
  |                     ^^^^^^^^^^^^^^^^ required by this bound in `Ord`

error[E0277]: can't compare `Foo<T>` with `Foo<T>`
 --> tests/derive_no_bound_ui/ord.rs:6:8
  |
6 | struct Foo<T: Config> {
  |        ^^^^^^^^^^^^^^ no implementation for `Foo<T> == Foo<T>`
  |
  = help: the trait `PartialEq` is not implemented for `Foo<T>`
note: required by a bound in `std::cmp::Eq`
 --> $RUST/core/src/cmp.rs
  |
  | pub trait Eq: PartialEq<Self> {
  |               ^^^^^^^^^^^^^^^ required by this bound in `Eq`
