frame/support/test/tests/derive_no_bound_ui/ord.rs
trait Config {
	type C;
}

#[derive(frame_support::OrdNoBound)]
struct Foo<T: Config> {
	c: T::C,
}

fn main() {}
